manifests.yaml
---
# Source: apps-template/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-stable
  annotations:
    prometheus.io/fastscrape: 'true'
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: 'sedemo-app-oct-app'
---
# Source: apps-template/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-canary
  annotations:
    prometheus.io/fastscrape: 'true'
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: 'sedemo-app-oct-app'
---
# Source: apps-template/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "staging.oct.akpdemoapps.link"
    secretName: tls-secret
  rules:
  - host: "staging.oct.akpdemoapps.link"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-stable
            port:
              number: 80
---
# Source: apps-template/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: "sedemo-app-oct-app"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "sedemo-app-oct-app"
  template:
    metadata:
      labels:
        app: "sedemo-app-oct-app"
    spec:
      containers:
        - image: "ghcr.io/akuity/sedemo-app-oct:2"
          name: "sedemo-app-oct-app"
          ports:
            - containerPort: 80
  minReadySeconds: 30
  revisionHistoryLimit: 3
  strategy:
    canary: #Indicates that the rollout should use the Canary strategy
      canaryService: svc-canary  # required
      stableService: svc-stable # required
      trafficRouting:
        nginx:
          stableIngress: stable-ingress
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 4
      maxSurge: '25%'
      maxUnavailable: 0
      steps:
        - setWeight: 10
        - pause:
            duration: 20s 
        - setWeight: 20
        - analysis:
            templates:
            - templateName: loadgen
        - pause:
            duration: 20s 
        - setWeight: 50
        - pause:
            duration: 1m 
        - setWeight: 75
        - pause:
            duration: 20s 
        - setWeight: 100
